# maguro

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
ksw2/: Cargo.toml  build.rs  wrapper.h
ksw2/src/: bindings.rs  lib.rs
src/: alphabet.rs  index.rs  lib.rs  mapper.rs  sam.rs  sequence.rs  utils.rs
src/index/: rank9b.rs  suffix_array.rs
src/mapper/: align.rs  chain.rs  pair.rs  single.rs
