[package]
name = "maguro"
version = "0.1.0"
authors = ["Yuta Imazu <yuta.imazu@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
bincode = "1.3.1"
bio = "0.32.0"
bitvec = "0.20.1"
bstr = "0.2.14"
crossbeam-deque = "0.8.0"
crossbeam-utils = "0.8.1"
itertools = "0.10.0"
ksw2 = { path = "ksw2" }
prettytable-rs = "0.8.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_bytes = "0.11.5"
size = "0.1.2"
structopt = "0.3.21"

[lib]
path = "src/lib.rs"

[[bin]]
name = "maguro"
path = "src/bin/maguro/main.rs"
doc = false

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
